# Qt-Practice

./: racecar.cpp  racecar.h
QByteArray/: CMakeLists.txt  main.cpp
QDateTime/: CMakeLists.txt  main.cpp
QDebug/: CMakeLists.txt  main.cpp
QList/: CMakeLists.txt  main.cpp
QListPractise/: CMakeLists.txt  main.cpp
QMap/: CMakeLists.txt  main.cpp  pet.cpp  pet.h
QObjectClass/: CMakeLists.txt  main.cpp  test.h
QObjects/: CMakeLists.txt  cat.cpp  cat.h  dog.cpp  main.cpp
QObjectsCannotBeCopied/: CMakeLists.txt  main.cpp
QString/: CMakeLists.txt  main.cpp
QStringList/: CMakeLists.txt  main.cpp
QVariant/: CMakeLists.txt  main.cpp
QVector/: CMakeLists.txt  main.cpp
ageCalc/: CMakeLists.txt  main.cpp
ageCalculator/: CMakeLists.txt  agecalc.cpp  agecalc.h  main.cpp
arithmethicOperators/: CMakeLists.txt  main.cpp
arrays/: CMakeLists.txt  main.cpp
assignmentOperators/: CMakeLists.txt  main.cpp
autoMemoryManagement/: CMakeLists.txt  main.cpp  test.h
byRefbyValue/: CMakeLists.txt  main.cpp
cPlusPlusHandling/: CMakeLists.txt  main.cpp
casting/: CMakeLists.txt  main.cpp
castingAssignment/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
cerr/: CMakeLists.txt  main.cpp
cin/: CMakeLists.txt  main.cpp
classScope/: CMakeLists.txt  animal.cpp  animal.h  main.cpp
classes/: CMakeLists.txt  animal.h  main.cpp
comparisonOperators/: CMakeLists.txt  main.cpp
cout/: main.cpp  (+1 more)
inheritance/: CMakeLists.txt  animal.cpp  animal.h  canine.cpp  canine.h  feline.cpp  feline.h  mamal.cpp  mamal.h  monster.cpp  monster.h
(+170 files in other folders)
